--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,8 +1,8 @@
-$backgroundColor: blue;
-$radius: 40%;
+$backgroundColor: #f5f5f5;
 
 footer {
-  display: right;
-  margin: auto;
-  background-color: $backgroundColor;
+  background: darken($backgroundColor, 50);
+  border-top: 1px solid #eee;
+  padding: 1em 3em;
+  margin: 0;
 }
