lab27 having trouble with testing. Test written, but fail.

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -4,7 +4,10 @@ $radius: 40%;
 form {
   display: inline-block;
   margin: auto;
-  width: 200px;
+  padding-left: 2%;
+  width: 300px;
+  height: 200px;
+  border: 3px black solid;
 
   label {
     display: flex;
@@ -17,10 +20,13 @@ form {
         padding: .25rem .5rem;
         background: #ccc;
 
-        &:hover, &.active {
+        &:hover,
+        &.active {
           background: #fff;
         }
       }
     }
   }
 }
+
+
